fix(GeocodeAddressBar): z-index

--- a/src/base/static/scss/_media.scss
+++ b/src/base/static/scss/_media.scss
@@ -374,7 +374,7 @@
     right: 0;
     bottom: auto;
     left: 0;
-    z-index: 39;
+    z-index: 11;
     border-right: 1px solid #666;
     margin-top: 0;
     background-color: #fff;
